[package]
name = "libp2p-webrtc-cert-expirey"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
futures = "0.3.31"
libp2p = { version = "0.55.0", features = ["tokio", "noise", "macros", "ping", "tcp", "identify", "yamux", "relay", "quic"] }
libp2p-request-response = {version = "0.28.0", features = ["cbor"]}
libp2p-webrtc = { version = "0.9.0-alpha", features = ["tokio", "pem"] }
openssl = "0.10.72"
rand = "0.8"
serde = "1.0.219"
serde_cbor = "0.11.2"
tokio = { version = "1.44.2", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
webrtc = "0.12.0"
x509-parser = "0.17.0"
